# cminusfc

./: .clang-format  .gitignore  CMakeLists.txt  Lab2-score  Lab3-score  Lab4-score  Makefile  README.md  test.c  tips.md
Documentations/1-parser/: Basics.md  Flex-regular-expressions.md  Parser-FurtherReadings.md  README.md
Documentations/2-ir-gen-warmup/: README.md
Documentations/3-ir-gen/: README.md
Documentations/4-ir-opt/: CodeReading.md  README.md
Documentations/5-bonus/: README.md  T1_backend.md  T2_advanced_optimization.md  T3_language_feature.md  T4_diagnostics.md
Documentations/common/: LightIR.md
Reports/1-parser/: README.md
Reports/2-ir-gen-warmup/: report.md  team.txt
Reports/3-ir-gen/: contribution.md  report.md
Reports/4-ir-opt/: contribution.md  report-phase1.md  report-phase2.md
Reports/5-bonus/: README.md  report.md
defense/: README.md
include/: ast.hpp  cminusf_builder.hpp  syntax_tree.h
include/codegen/: codegen.h  constant.h  instruction.h  phi_elim.h  reg.h  regalloc.h  riscv_instr_format.td  riscv_regs.td  value.h
include/lightir/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRBuilder.h  Instruction.h  Module.h  Type.h  Value.h
include/optimization/: ActiveVars.hpp  ConstPropagation.hpp  Dominators.h  LoopInvHoist.hpp  LoopSearch.hpp  PassManager.hpp
src/: CMakeLists.txt
src/cminusfc/: CMakeLists.txt  builder_ta.cpp  cminusf_builder.cpp  cminusfc.cpp  utils.cpp  utils.hpp
src/codegen/: CMakeLists.txt  all_kinds_of_regs.cpp  codegen.cpp  instgen.cpp  phi_elim.cpp  regalloc.cpp
tests/: CMakeLists.txt
(+52 files in other folders)
